--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,5 +1,3 @@
-<app-navbar></app-navbar>
-<div class="container">
+<app-navbar *ngIf="showNavbarAndFooter"></app-navbar>
   <router-outlet></router-outlet>
-</div>
-<app-footer></app-footer>
+<app-footer *ngIf="showNavbarAndFooter"></app-footer>
